--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -60,7 +60,7 @@ compiled_ui_files:
 resource_files: resources.qrc
 
 # Other files required for the plugin
-extras: metadata.txt download.svg split.svg logo.svg logo.png LICENSE
+extras: metadata.txt download.svg split.svg logo.svg logo.png qaqc.svg LICENSE
 
 # Other directories to be deployed with the plugin.
 # These must be subdirectories under the plugin directory
