added import funtionality

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -48,7 +48,7 @@ plugin_path:
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: __init__.py connect_odk.py connect_odk_dialog.py split_layer_dialog.py qaqc.py
+python_files: __init__.py connect_odk.py connect_odk_dialog.py split_layer_dialog.py qaqc.py upload.py
 
 # The main dialog file that is loaded (not compiled)
 main_dialog: connect_odk_dialog_base.ui
@@ -60,7 +60,7 @@ compiled_ui_files:
 resource_files: resources.qrc
 
 # Other files required for the plugin
-extras: metadata.txt download.svg split.svg logo.svg logo.png qaqc.svg  requirements.txt LICENSE
+extras: metadata.txt download.svg split.svg logo.svg logo.png qaqc.svg upload2.svg  upload.svg  requirements.txt LICENSE
 
 # Other directories to be deployed with the plugin.
 # These must be subdirectories under the plugin directory
